# CMake101

./: README.md
Building-Library/: CMakeLists.txt
Hello-World/: CMakeLists.txt
Multiple-Directories/: CMakeLists.txt
Multiple-Directories/src/: student.cpp
Using-Library/: CMakeLists.txt
Using-Library/libs/include/: student.h
Using-Library/libs/sharedLibs/: libsharedTestStudent.dylib
Using-Library/src/: main.cpp
